# credit_risk_modelling

./: .gitignore  pyproject.toml
app/: prediction_helper.py
artifacts/: model_data.joblib
notebook/: credit_risk_model.ipynb
