[project]
name = "credit-risk-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
]
